# test_task_ioka

./: .env  README.md  main.py  pyproject.toml  requirements.txt
app/api/endpoints/: endpoints.py
app/error_handler/: error_handler.py  error_messages.py
app/schema/: request_body.py  response_body.py
app/security/: security.py
app/service/: services.py
app/settings/: config.py  database.py
app/templates/: index.html  login.html  main_page.html
